--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/vditor-extend.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/vditor-extend.css
@@ -38,6 +38,7 @@
     border-radius: 8px;
     padding-left: 0px !important;
     padding-right: 0px !important;
+    word-break: break-all;
 }
 
     .vditor-reset *::-webkit-scrollbar {
@@ -69,6 +70,10 @@
 
 .vditor-ir__node--expand[data-type="code-block"] .vditor-ir__preview {
     display: none;
+}
+
+.vditor-sv {
+    word-break: break-all;
 }
 
 .vditor-outline {
